--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,7 +9,8 @@ python-multipart==0.0.9
 sqlalchemy==2.0.35  # Updated version that supports Python 3.13
 aiosqlite==0.20.0  # Updated version
 # For PostgreSQL (production recommended):
-# asyncpg==0.29.0
+asyncpg==0.29.0
+psycopg2-binary==2.9.9
 
 # Migrations
 alembic==1.13.1
@@ -34,8 +35,10 @@ pytest==7.4.4
 pytest-asyncio==0.23.3
 httpx==0.26.0
 
+# Dashboard
+Flask==3.0.0
+
 # Optional (for production)
-# psycopg2-binary==2.9.9  # PostgreSQL
 # redis==5.0.1  # Caching
 # celery==5.3.4  # Background tasks
 # sendgrid==6.11.0  # Email service
