--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,13 @@
     "lint": "echo \"(add ESLint config)\""
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.84.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1",
-    "@tanstack/react-query": "^5.51.23"
+    "react-router-dom": "^6.30.1"
   },
   "devDependencies": {
-    "vite": "^5.4.2"
+    "@vitejs/plugin-react": "^4.7.0",
+    "vite": "^5.4.19"
   }
 }
