--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.84.2",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.30.1"
+    "react-router-dom": "^6.30.1",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.7.0",
