Fix Vercel build: Move all build deps to production, add npmrc config

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,7 +1,7 @@
 {
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "installCommand": "npm install --production=false",
+  "installCommand": "npm install --force",
   "framework": "vite",
   "rewrites": [
     {
@@ -23,5 +23,10 @@
         }
       ]
     }
-  ]
+  ],
+  "functions": {
+    "api/build": {
+      "maxDuration": 60
+    }
+  }
 }
