--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,1 +1,37 @@
+# Dependencies
+node_modules/
+.pnp
+.pnp.js
+
+# Production
+/dist
+/build
+
+# Misc
+.DS_Store
+*.local
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Vercel
 .vercel
+
+# Environment files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
