--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,15 +11,15 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.84.2",
+    "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.30.1",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "vite": "^5.4.19"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.7.0",
-    "vite": "^5.4.19"
   }
 }
